--- a/lib/galaxy/config/sample/galaxy.yml.sample
+++ b/lib/galaxy/config/sample/galaxy.yml.sample
@@ -2448,3 +2448,5 @@ galaxy:
   # Display built-in converters in the tool panel.
   #display_builtin_converters: true
 
+  # URL of the remote data broker
+  #remote_data_broker_url: http://localhost:8090
